2004-07-09 Colin McCormack <colin@chinix.com>
        * sampleapp/ca/: Added a simple Certificate Authority sufficient
	to create CA and server keys, and deliver them to a client.

2004-07-08 Colin McCormack <colin@chinix.com>
        * lib/config.tcl: fixed bug in config file rewrite

2004-06-30 Colin McCormack <colin@chinix.com>
        * lib/doc.tcl: fixed sf [977562] Url_AccessInstallPrepend crashes
	DocDomain with suggested patch.
        * lib/{doc,subst}.tcl: fixed bugs handling symlinks to directories.
        * lib/md5hex.tcl: fixed md5 alias argument error.

2004-06-18 Brent Welch <welch@panasas.com>
        * bin/httpd.tcl: Fixed stacktrace caused by -? command line arg
            Added "wm withdraw ."  if Config(gui) is false
            Removed "package require md5 1"
        * lib/md5hex.tcl: new file to provide md5hex shim function
        * lib/digest.tcl, lib/session.tcl: these now
            package require httpd::md5hex
        * lib/version.tcl: changed version to "3.5.2 CVS"

2004-06-15 Brent Welch <welch@panasas.com>
        * lib/digest.tcl: Added "package require md5 1"
        * lib/utils.tcl: Removed "package present md5"
          because this messes up any system that loads utils.tcl but
          does not load digest.tcl  The little "md5hex" function
          is local to digest.tcl now.  This is a slightly different
          fix than proposed by Colin, but I'd rather keep inter-package
          dependencies local, so you only need md5 if you need digest.

2004-06-16 Colin McCormack <colin@chinix.com>
	* Fixed problem with virtual hosts and md5 tcllib bugfix.

2004-06-15 Brent Welch <welch@panasas.com>
        * lib/template.tcl: code smithing and bug fixes in new code.

2004-06-15 Colin McCormack <colin@chinix.com>
	* lib/{template,fallback}.tcl: Fixed bugs in .html/.htm substitution
	  and fallback content negotiation

2004-06-14 Brent Welch <welch@panasas.com>
        * lib/digest.tcl: Removed the "ne" operator from expressions