@@ -7,7 +7,7 @@
 # See the file "license.terms" for information on usage and redistribution
 # of this file, and for a DISCLAIMER OF ALL WARRANTIES.
 #
-# RCS: @(#) $Id: subst.tcl,v 1.8 2004/06/30 12:52:24 coldstore Exp $
+# RCS: @(#) $Id: subst.tcl,v 1.9 2004/07/18 13:32:32 coldstore Exp $
 
 package provide httpd::subst 1.0
 
@@ -129,7 +129,11 @@ proc Subst_File {path {interp {}}} {
 	    return [uplevel 1 [list SubstFile $path $interp]]
 	}
 	link {
-	    return [uplevel 1 [list Subst_File [file readlink $path] $interp]]
+	    set link [file readlink $path]
+	    if {[file pathtype $link] == "relative"} {
+		set link [file join [file dirname $path] $link]
+	    }
+	    return [uplevel 1 [list Subst_File $link $interp]]
 	}
 	directory {
 	    return [uplevel 1 [list SubstFile [file join $path index.tml] $interp]]
